// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FlatCard > should render with many props assigned 1`] = `
<div>
  <article
    class="relative mx-4 my-6 box-border max-w-[400px] rounded-xl shadow-sm test-class"
  >
    <div
      class="flex flex-col gap-5 rounded-xl border-2 border-solid border-primary p-8"
    >
      <div
        class="text-center"
      >
        <h1>
          Main heading
        </h1>
        <h6>
          Sub heading
        </h6>
      </div>
      <hr
        class="w-full border-2 border-solid border-primary"
      />
      <div>
        <p>
          Example content goes here
        </p>
        <p>
          More content goes here
        </p>
      </div>
      <div
        class="absolute inset-x-0 -bottom-7 text-center [&>a]:hover:bg-white [&>a]:hover:text-secondary [&>a]:focus-visible:bg-white [&>a]:focus-visible:text-secondary [&>button]:hover:bg-white [&>button]:hover:text-secondary [&>button]:focus-visible:bg-white [&>button]:focus-visible:text-primary"
      >
        <a
          class="font-family-bebas font-bold text-center uppercase text-shadow-[initial] tracking-wide inline-block rounded-md leading-none border-2 border-solid cursor-pointer py-4 px-3 whitespace-nowrap transition-all duration-200 ease-in-out min-w-[175px] focus-visible:bg-transparent hover:bg-transparent disabled:opacity-60 disabled:hover:cursor-not-allowed border-primary bg-primary text-secondary outline-primary hover:text-primary focus-visible:text-primary"
          href="/"
        >
          Widget Action
        </a>
      </div>
    </div>
  </article>
</div>
`;

exports[`FlatCard > should render with required props 1`] = `
<div>
  <article
    class="relative mx-4 my-6 box-border max-w-[400px] rounded-xl shadow-sm"
  >
    <div
      class="flex flex-col gap-5 rounded-xl border-2 border-solid border-primary p-8"
    >
      <div>
        <p>
          Example content goes here
        </p>
        <p>
          More content goes here
        </p>
      </div>
    </div>
  </article>
</div>
`;
